--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <div class="header__top">
             <div class="container">
                 <div class="header__top-inner">
@@ -92,7 +92,27 @@
                 </nav>
             </div>
         </div>
-    </div>
+    </header>
+    <section class="search" style="background-image: url(images//search-bg.jpg);">
+        <div class="container">
+            <div class="search__inner">
+                <div class="search__inner-title">   
+                    Welcome To Foxtar Market Place!
+                </div>
+                <div class="search__inner-text">
+                    Premium WordPress Themes, Web Templates and Many More ...
+                </div>
+                <div class="search__inner-form">
+                    <form action="#">
+                        <input type="text" placeholder="Search Your Keywords . . ." required>
+                        <button type="submit">
+                            <img src="images/icons/search.png" alt="">
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
