add selection products

--- a/app/index.html
+++ b/app/index.html
@@ -38,55 +38,55 @@
             <div class="container">
                 <nav class="menu">
                     <ul class="menu-list">
-                        <li> 
+                        <li>
                             <a href="#">
                                 Home
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 About
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 WordPress
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 Joomla
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 PSD
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 Plugins
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 Components
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 Pages
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 Contact
-                        </a>
+                            </a>
                         </li>
                         <li>
                             <a href="#">
                                 Help
-                        </a>
+                            </a>
                         </li>
                     </ul>
                 </nav>
@@ -96,7 +96,7 @@
     <section class="search" style="background-image: url(images//search-bg.jpg);">
         <div class="container">
             <div class="search__inner">
-                <div class="search__inner-title">   
+                <div class="search__inner-title">
                     Welcome To Foxtar Market Place!
                 </div>
                 <div class="search__inner-text">
@@ -113,7 +113,229 @@
             </div>
         </div>
     </section>
-
+    <section class="products">
+        <div class="container-fluid">
+            <div class="products-title title">
+                Let’s Check Out Our Newest Release Prodcuts
+            </div>
+            <div class="products__inner">
+                <div class="products__inner-btn">
+                    <button type="button" data-filter="all">All</button>
+                    <button type="button" data-filter=".category-wordpress">WordPress</button>
+                    <button type="button" data-filter=".category-joomla">Joomla</button>
+                    <button type="button" data-filter=".category-plugins">Plugins</button>
+                    <button type="button" data-filter=".category-component">Component</button>
+                    <button type="button" data-filter=".category-psd">PSD</button>
+                </div>
+                <div class="products__inner-box">
+                    <div class="product__item mix category-component">
+                        <a class="product__item-img" style="background-image: url(images/content/product-item1.jpg);" href="#"></a>
+                        <div class="product__item-content">
+                            <div class="product__item-name">
+                                <a class="product__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="product__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="product__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="product__item-info">
+                            <a class="product__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="product__item-start">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__item mix category-">
+                        <a class="product__item-img" style="background-image: url(images/content/product-item1.jpg);" href="#"></a>
+                        <div class="product__item-content">
+                            <div class="product__item-name">
+                                <a class="product__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="product__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="product__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="product__item-info">
+                            <a class="product__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="product__item-start">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__item mix category-wordpress">
+                        <a class="product__item-img" style="background-image: url(images/content/product-item1.jpg);" href="#"></a>
+                        <div class="product__item-content">
+                            <div class="product__item-name">
+                                <a class="product__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="product__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="product__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="product__item-info">
+                            <a class="product__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="product__item-start">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__item mix category-psd">
+                        <a class="product__item-img" style="background-image: url(images/content/product-item1.jpg);" href="#"></a>
+                        <div class="product__item-content">
+                            <div class="product__item-name">
+                                <a class="product__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="product__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="product__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="product__item-info">
+                            <a class="product__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="product__item-start">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__item mix category-wordpress category-popular">
+                        <a class="product__item-img" style="background-image: url(images/content/product-item1.jpg);" href="#"></a>
+                        <div class="product__item-content">
+                            <div class="product__item-name">
+                                <a class="product__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="product__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="product__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="product__item-info">
+                            <a class="product__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="product__item-start">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__item mix category-plugins category-popular">
+                        <a class="product__item-img" style="background-image: url(images/content/product-item1.jpg);" href="#"></a>
+                        <div class="product__item-content">
+                            <div class="product__item-name">
+                                <a class="product__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="product__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="product__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="product__item-info">
+                            <a class="product__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="product__item-start">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__item mix category-psd category-new">
+                        <a class="product__item-img" style="background-image: url(images/content/product-item1.jpg);" href="#"></a>
+                        <div class="product__item-content">
+                            <div class="product__item-name">
+                                <a class="product__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="product__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="product__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="product__item-info">
+                            <a class="product__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="product__item-start">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__item mix category-wordpress category-new">
+                        <a class="product__item-img" style="background-image: url(images/content/product-item1.jpg);" href="#"></a>
+                        <div class="product__item-content">
+                            <div class="product__item-name">
+                                <a class="product__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="product__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="product__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="product__item-info">
+                            <a class="product__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="product__item-start">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="products__bottom-btn">
+                <button type="button" data-filter=".category-new">All New Items</button>
+                <button type="button" data-filter=".category-popular">Popular Items</button>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -145,7 +367,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
