--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -832,7 +833,7 @@
     <section class="author" style="background-image: url(images/author-bg.jpg);">
         <div class="author__box">
             <div class="author__title">
-                Over <span>20,000</span> Author 
+                Over <span>20,000</span> Author
                 Are Involved Here!
             </div>
             <a href="#" class="author__link">
@@ -840,17 +841,6 @@
             </a>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
     <section class="tutorial">
         <div class="container">
             <div class="tutorial__title title">
@@ -878,38 +868,85 @@
                         HTML & CSS Tutorials
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="footer">
-        <div class="container">
-
-
-
-
+        <div class="footer__content">
+            <div class="container">
+                <div class="footer__inner">
+                    <div class="footer__coll">
+                        <div class="footer__coll-title">
+                            About Company
+                        </div>
+                        <div class="footer__coll-text">
+                            Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit
+                            amet urna iat.Praesent vel rutrum purus.
+                        </div>
+                        <div class="footer__coll-info">
+                            PO Box 16122 Collins Street West
+                            Victoria 8007 Australia
+                        </div>
+                        <a class="footer__coll-info footer__info-phone" href="tel:61383766284">
+                            +61 3 8376 6284
+                        </a>
+                    </div>
+                    <div class="footer__coll">
+                        <div class="footer__coll-title">
+                            Join Our Community
+                        </div>
+                        <ul class="footer__coll-list footer__coll-menu">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Forums</a></li>
+                            <li><a href="#">Become an Author</a></li>
+                            <li><a href="#">Community Meetups</a></li>
+                            <li><a href="#">Become an Affiliate</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__coll">
+                        <div class="footer__coll-title">
+                            Need Help?
+                        </div>
+                        <ul class="footer__coll-list footer__coll-menu">
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">Foxtar Market Terms</a></li>
+                            <li><a href="#">Author Terms</a></li>
+                            <li><a href="#">Foxtar Licenses</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__coll">
+                        <div class="footer__coll-title">
+                            Follow Us On
+                        </div>
+                        <ul class="footer__social-link">
+                            <li><a class="link-facebook" href="#"></a></li>
+                            <li><a class="link-twitter" href="#"></a></li>
+                            <li><a class="link-youtube" href="#"></a></li>
+                            <li><a class="link-pinterest" href="#"></a></li>
+                            <li><a class="link-linledin" href="#"></a></li>
+                        </ul>
+                        <div class="footer__form">
+                            <div class="footer__form-title">
+                                Newsletter Sign Up!
+                            </div>
+                            <form action="#">
+                                <input type="text" placeholder="E-mail Address">
+                                <button type="submit"></button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copy">
+            <div class="container">
+                <div class="footer__copy-text">
+                    © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.
+                </div>
+            </div>
         </div>
     </div>
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
