--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,9 @@
                                 <a class="header__phone" href="tel:61383766284">+61 3 8376 6284</a>
                             </div>
                             <div class="header__box">
-                                <div class="notification__box">
-                                    <a class="notification header__circle active icon-bell-o" href="#"><span>8</span></a>
+                                <div class="notification__box header__btn-login--off">
+                                    <a class="notification header__circle active icon-bell-o"
+                                        href="#"><span>8</span></a>
                                     <div class="circle__menu notification__menu">
                                         <a href="#" class="circle__item icon-bell-o icons-col">
                                             <img class="circle__images" src="images/content/message.jpg" alt="">
@@ -69,7 +70,7 @@
                                     </div>
                                 </div>
 
-                                <div class="message__box">
+                                <div class="message__box header__btn-login--off">
                                     <a class="message header__circle active icon-envelope-o" href="#"><span>5</span></a>
                                     <div class="circle__menu message__menu">
                                         <a href="#" class="circle__item icon-envelope-o icons-col">
@@ -165,7 +166,7 @@
                                     </div>
                                 </div>
                                 <div class="user__box">
-                                    <a class="user" href="#">
+                                    <a class="user header__btn-login--off" href="#">
                                         <div class="user__inner">
                                             <div class="user__images"><img src="images//content/user__login.jpg" alt="">
                                             </div>
@@ -193,17 +194,23 @@
                                     </div>
                                 </div>
                                 <a href="#"
-                                    class="header__btn header__btn-login header__btn header__btn-login--off">Login</a>
-                                <a href="#" class="header__btn header__btn-logout header__btn-login--on">Logout</a>
+                                    class="header__btn header__btn-login header__btn">Login</a>
+                                <a href="#" class="header__btn header__btn-logout header__btn-login--off">Logout</a>
                                 <a href="#"
-                                    class="header__btn header__btn-register header__btn header__btn-login--off">Register</a>
+                                    class="header__btn header__btn-register header__btn">Register</a>
                             </div>
+                            <div class="header__btn-menu icon-user"></div>
                         </div>
                     </div>
                 </div>
                 <div class="header__menu">
                     <div class="container">
                         <nav class="menu">
+                            <div class="menu__btn">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
                             <ul class="menu-list">
                                 <li>
                                     <a href="#">
@@ -260,6 +267,7 @@
                     </div>
                 </div>
             </header>
+
             <section class="search" style="background-image: url(images//search-bg.jpg);">
                 <div class="container">
                     <div class="search__inner">
@@ -1059,7 +1067,7 @@
             <div class="footer__content">
                 <div class="container">
                     <div class="footer__inner">
-                        <div class="footer__coll">
+                        <div class="footer__coll footer__coll-addres">
                             <div class="footer__coll-title">
                                 About Company
                             </div>
@@ -1076,11 +1084,11 @@
                                 +61 3 8376 6284
                             </a>
                         </div>
-                        <div class="footer__coll">
+                        <div class="footer__coll footer__coll-menu">
                             <div class="footer__coll-title">
                                 Join Our Community
                             </div>
-                            <ul class="footer__coll-list footer__coll-menu">
+                            <ul class="footer__coll-list">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">Forums</a></li>
                                 <li><a href="#">Become an Author</a></li>
@@ -1088,11 +1096,11 @@
                                 <li><a href="#">Become an Affiliate</a></li>
                             </ul>
                         </div>
-                        <div class="footer__coll">
+                        <div class="footer__coll footer__coll-menu">
                             <div class="footer__coll-title">
                                 Need Help?
                             </div>
-                            <ul class="footer__coll-list footer__coll-menu">
+                            <ul class="footer__coll-list">
                                 <li><a href="#">Help Center</a></li>
                                 <li><a href="#">Foxtar Market Terms</a></li>
                                 <li><a href="#">Author Terms</a></li>
@@ -1100,7 +1108,7 @@
                                 <li><a href="#">Contact Us</a></li>
                             </ul>
                         </div>
-                        <div class="footer__coll">
+                        <div class="footer__coll footer__coll-cocial">
                             <div class="footer__coll-title">
                                 Follow Us On
                             </div>
@@ -1124,6 +1132,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="footer__copy">
                 <div class="container">
                     <div class="footer__copy-text">
