--- a/app/index.html
+++ b/app/index.html
@@ -193,11 +193,10 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <a href="#"
-                                    class="header__btn header__btn-login header__btn">Login</a>
+                                <a class="header__btn header__btn-login header__btn" data-fancybox data-src="#model"
+                                    href="javascript:;">Login</a>
                                 <a href="#" class="header__btn header__btn-logout header__btn-login--off">Logout</a>
-                                <a href="#"
-                                    class="header__btn header__btn-register header__btn">Register</a>
+                                <a href="#" class="header__btn header__btn-register header__btn">Register</a>
                             </div>
                             <div class="header__btn-menu icon-user"></div>
                         </div>
@@ -1141,6 +1140,24 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <div id="model">
+        <div class="login-wrapper">
+            <div class="login__title">
+                Login
+            </div>
+            <form>
+                <label class="login__label-name">
+                    <input type="text" placeholder="Name" required>
+                </label>
+                <label class="login__label-password">
+                    <input type="text" placeholder="Password" required>
+                </label>
+                <button type="submit">Submit</button>
+                <a class="new-acc" href="#">Creat An Account?</a>
+                <a class="lost-pass" href="#">Lost Password?</a>
+            </form>
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
